<resources>
    <string name="app_name">TrajectoryTracker</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="view_data">View Data</string>
    <string name="share_data">Share Data</string>
    <string name="title_activity_map">Map</string>
    <string name="capture_note">Note: starting new capture overwrites previous capture.</string>
</resources>
